fix post title size on mobile

--- a/_sass/blog.sass
+++ b/_sass/blog.sass
@@ -7,7 +7,7 @@
 
 .post-title
   font-weight: 800
-  font-size: 5rem
+  font-size: 4rem
   text-transform: uppercase
   line-height: 1
 
